// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test to GifExpertApp component should create component 1`] = `
<Fragment>
  <h2>
    Gif Expert App
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;

exports[`Test to GifExpertApp component should validate if call AddCategory and GifGrid components 1`] = `
<Fragment>
  <h2>
    Gif Expert App
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="cars"
      key="cars"
    />
    <GifGrid
      category="cats"
      key="cats"
    />
  </ol>
</Fragment>
`;
